--- a/source/style.css
+++ b/source/style.css
@@ -14,13 +14,11 @@ body {
 #content {
   padding-top: 0px;
   padding-right:75px;
-  padding-bottom: 50px;
   padding-left: 75px;
 }
   #content a:link, #content a:visited, #content a:hover { text-decoration: underline; }
 
 #updated { float: left;}
-#rcs { float: right;}
 
 a:link, a:visited { color: black; text-decoration: none; }
 a:hover { color: black; text-decoration: underline; }
@@ -28,10 +26,11 @@ a:hover { color: black; text-decoration: underline; }
 h1, h2, h3, h4 { margin-bottom: 1em; margin-top:2em;}
 p { margin-top: 0px; }
 #screenshot {
-  margin-top: 30px;
-  margin-bottom: 80px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 #dmg {
+  border: 0px;
   float: right;
   margin-left: 30px;
 }
