--- a/source/style.css
+++ b/source/style.css
@@ -25,12 +25,14 @@ a:hover { color: black; text-decoration: underline; }
 
 h1, h2, h3, h4 { margin-bottom: 1em; margin-top:2em;}
 p { margin-top: 0px; }
+img {
+  border: 0px;
+}
 #screenshot {
   margin-top: 40px;
   margin-bottom: 40px;
 }
 #dmg {
-  border: 0px;
   float: right;
   margin-left: 30px;
 }
